--- a/hyperparameters.yml
+++ b/hyperparameters.yml
@@ -32,18 +32,20 @@ flappybird1:
 flappybird2:
   env_id: FlappyBird-v0
   replay_memory_size: 100000
-  mini_batch_size: 128
-  epsilon_init: 1
-  epsilon_decay: 0.99_99_5
-  epsilon_min: 0.05
-  network_sync_rate: 10
-  learning_rate_a: 0.0001
+  mini_batch_size: 64
+  epsilon_init: 1.0
+  epsilon_decay: 0.995
+  epsilon_min: 0.01
+  network_sync_rate: 2000
+  learning_rate_a: 0.0005
   # learning_rate_a: 0.001
   discount_factor_g: 0.99
   stop_on_reward: 100000
-  fc1_nodes: 512
+  fc1_nodes: 256
   env_make_params:
     use_lidar: False
   enable_double_dqn: True
   enable_dueling_dqn: True
+
+  
   
